# poetry-template

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  .travis.yml  README  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: tox.yml
demo/: settings.py  urls.py  wsgi.py
demo/catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
demo/catalog/migrations/: 0001_initial.py  0002_auto_20160921_1401.py  0008_auto_20160921_1511.py  0010_auto_20160921_1527.py  0011_auto_20160922_1029.py  0012_bookinstance_date_acquired.py  0013_auto_20160926_1901.py  0018_book_language.py  0019_bookinstance_borrower.py  0022_auto_20181028_1731.py  0023_auto_20201201_0238.py  0024_auto_20210302_0630.py
tests/: __init__.py  apps.py  models.py  settings.py  test_my_app.py  test_poetry_template.py
tests/test_app/: __init__.py  admin.py  apps.py
tests/test_app/migrations/: 0001_initial.py
