[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["YunoJuno <code@yunojuno.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"
pylint-django = "^2.0"
flake8 = "^3.7"
flake8-bandit = "^2.1"
flake8-docstrings = "^1.5"
isort = "^4.3"
mypy = "^0.750.0"
pre-commit = "^1.20"
black = "=19.3b0"
pytest-cov = "^2.8"
pytest-django = "^3.7"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
